# aoc2023

01/bash/: part1.sh
01/haskell/: CHANGELOG.md  x01.cabal
01/haskell/app/: Main.hs
01/python/: main.py
02/python/: main.py
03/python/: main.py
04/python/: main.py
05/python/: main.py
06/python/: main.py
07/python/: main.py
08/python/: main.py
09/python/: main.py
10/python/: main.py
11/python/: main.py
12/python/: main.py
13/python/: main.py
15/python/: main.py
16/python/: main.py
17/python/: main.py  output.txt
18/python/: main.py
19/python/: main.py  output.txt  requirements.txt
20/python/: main.py
